# puda-elephant

./: README.md  cobot_main.py  grab.py  vlm_move.py  vlm_pick.py
driver/: README.md  pyproject.toml  ros2.md
driver/src/elephant_driver/: __init__.py  elephant.py  ros.py
driver/tests/: ros.py  test.py
edge/: .env.example  main.py  pyproject.toml
kyle/: cobot_main.py  pro630_bridge1.py
