[project]
name = "elephant-edge"
version = "0.1.0"
description = "Edge service for the 'elephant' machine"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "elephant-driver",
    "puda_comms==0.0.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
]

[tool.uv.sources]
elephant-driver = {workspace=true}